--- a/nonogram/templates/play.jinja
+++ b/nonogram/templates/play.jinja
@@ -14,10 +14,23 @@
     </div>
     <script src="{{ url_for('static', filename='theme.js') }}" type="text/javascript" ></script>
     <table>
-    {% for col in lyrics_lst %}
+    {% for row in nonogram %}
         <tr>
-        {% for word in col%}
-            <td class="lyric" id="hidden" data-lyric="{{word}}">X</td>
+        {% set row_num = loop.index0%}
+        {% for item in row%}
+            {% if row_num == 0 %}
+              {% for col_keys in item%}
+                <td class="col-key">{%for key in col_keys %}<p>{{key}}</p>{% endfor %}</td> <!-- Concat all the column keys together vertically in one cell -->
+              {% endfor %}
+            {%else%}
+              {% if loop.first %}
+                <td class="row-key">{%for key in item %}{{key}} {% endfor %}</td> <!-- Concat all the row keys together horizontally in one cell -->
+              {% else %}
+                {% for bool in item %}
+                  <td class="gram" id="{{bool}}">{{bool}}</td>
+                {% endfor %}
+              {% endif %}
+            {% endif %}
         {% endfor %}
         </tr>
     {% endfor %}
