Add button to play a new nonogram

--- a/nonogram/templates/play.jinja
+++ b/nonogram/templates/play.jinja
@@ -12,6 +12,7 @@
           <div class="slider round"></div>
       </label>
     </div>
+    <button id="new" onclick="window.location.href='./size';">Play a new Nonogram</button>
     <script src="{{ url_for('static', filename='theme.js') }}" type="text/javascript" ></script>
     <table>
     {% for row in nonogram %}
