Add button to recreate nonogram

--- a/nonogram/templates/play.jinja
+++ b/nonogram/templates/play.jinja
@@ -13,6 +13,7 @@
       </label>
     </div>
     <button id="new" onclick="window.location.href='./size';">Play a new Nonogram</button>
+    <button id="new" onclick="window.location.reload();">Recreate Nonogram</button>
     <script src="{{ url_for('static', filename='theme.js') }}" type="text/javascript" ></script>
     <table>
     {% for row in nonogram %}
