--- a/nonogram/templates/play.jinja
+++ b/nonogram/templates/play.jinja
@@ -15,7 +15,7 @@
     <button id="new" onclick="window.location.href='./size';">Play a new Nonogram</button>
     <button id="new" onclick="window.location.reload();">Recreate Nonogram</button>
     <script src="{{ url_for('static', filename='theme.js') }}" type="text/javascript" ></script>
-    <table>
+    <table id="nonogram">
     {% for row in nonogram %}
         <tr>
         {% set row_num = loop.index0%}
